@@ -151,4 +151,6 @@ UI_EN = {
     UI_trait_paranoiadesc = "Periodically, you will get a false scare and panic.<br>You will need to actively find ways to reduce your stress - it only gets worse after a paranoia attack.",
     UI_butterfingers_triggered = "*Butterfingers*",
     UI_scrounger_found = "Oh, look, an extra %s",
+    UI_trait_quickworker = "Quick Worker",
+    UI_trait_quickworkerdesc = "You have a penchant for expedience in all things.<br>Your timed actions (such as sawing logs, crafting items, or disassembling furniture) are considerably faster.",
 }
