@@ -16,3 +16,4 @@ Adjusted trait costs.
 Make Weight Checks more consistent.
 Tweak Gourmand freshness effect.
 Ingenuitive now teaches all recipes.
+Add new trait: Quick Worker
